bugfix/ fix res on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,13 +12,17 @@
 	h1 {
 		margin-bottom: 40px;
 	}
+	p {
+		margin-top: 0;
+		margin-bottom: 2em;
+	}
 	.ant-card {
 		min-height: 610px;
 		margin-bottom: 40px !important;
 
 		button {
-			width: 290px;
 			margin: 0 auto;
+			width: 150px;
 			position: absolute;
 			bottom: 10px;
 		}
